nickname support -small bug and gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
 /target/classes/com/accenture/bootcamp/Main.class
 /target/classes/com/accenture/bootcamp/ServerThread.class
+/target/classes/com/accenture/bootcamp/TelnetChatWorker.class
